Add Cassandra Jenkins review

--- a/gatsby/content/2021-my-year-in-lists.mdx
+++ b/gatsby/content/2021-my-year-in-lists.mdx
@@ -112,7 +112,7 @@ on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro 
 
 <AlbumEmbed spotifyID="45ba6QAtNrdv6Ke4MFOKk9" className="float-right" />
 
-In the year 2021, Tyler really put out a DJ Drama hosted mixtape. I did not have that on my bingo card for the year
+In the year 2021, Tyler really put out a Gangsta Grillz mixtape. I did not have that on my bingo card for the year
 because why would such an awesome thought cross my mind? Most importantly, it delivers in such a complete way that I'm
 going to have trouble describing it.
 
@@ -146,6 +146,9 @@ this level a decade later?
   bandcampID="3029590837"
   className="float-right"
 />
+
+I've never sold drugs and I don't know a word of Hatian Creole, but all the same, I found this Mach-Hommy album
+completely engrossing.
 
 I'm baby craft beer thundercats hexagon skateboard. Jean shorts messenger bag austin brunch health goth chicharrones
 subway tile flexitarian la croix quinoa pitchfork tofu 3 wolf moon chambray hashtag. Synth beard echo park glossier four
@@ -193,25 +196,39 @@ on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro 
   className="float-right"
 />
 
-I'm baby craft beer thundercats hexagon skateboard. Jean shorts messenger bag austin brunch health goth chicharrones
-subway tile flexitarian la croix quinoa pitchfork tofu 3 wolf moon chambray hashtag. Synth beard echo park glossier four
-loko. Kale chips wolf skateboard ramps taiyaki messenger bag raw denim mixtape schlitz etsy offal taxidermy heirloom
-flexitarian four dollar toast.
+Nostalgia never ceases to amaze me. When an artist is able clearly convey their nostalgia to a listener without any
+context… I get obsessed and just keep playing the album because it stirs up my nostalgia. A great example of this (and
+the only album I can really compare this album to) is Bill Callahan's _Dream River_. This is probably an overly generic
+description of all art and I'm dumb, but this is my blog so I'm saying it.
 
-Vinyl pop-up jianbing mlkshk snackwave four loko. Lumbersexual humblebrag gochujang salvia synth. Occupy cornhole
-flexitarian hot chicken. Hoodie bicycle rights mlkshk ramps viral. Cred hashtag activated charcoal tilde pabst disrupt.
+> A security guard<br />
+> Stopped me to offer an overview on phenomenal nature<br />
+> She said, "Sculpture is not just formed from penetration<br />
+> You see, men have lost touch with the feminine"<br />
+> And with her pink lipstick<br />
+> And her Queens accent<br />
+> She went on for a while about our president<br />
+>
+> \- Hard Drive
 
-Marfa pok pok letterpress bitters, offal live-edge sriracha mustache sustainable polaroid humblebrag banh mi poke
-skateboard. Whatever chia woke crucifix, vice jianbing semiotics fixie chicharrones. Iceland cloud bread meggings
-cold-pressed polaroid vape flexitarian enamel pin venmo. Kitsch cliche gluten-free mumblecore enamel pin YOLO put a bird
-on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro lo-fi man bun.
+There are mundane moments in _An Overview On Phenomenal Nature_ that make me terribly emotional. I cannot listen to the
+lyrics of _Hard Drive_ and not get tearful. On this song, there are just normal moments in a daily life that are sung so
+beautifully that I get emotional. It's really undescribable to me.
+
+Cassandra has an absolutely fantastic voice, the amount of smooth saxophone and guitar on this album really puts me in
+a relaxing place and the lyrics are so poetic. It's fantastic focusing music as you can tune out the lyrics and relax,
+but this album rewards reading the lyrics along with it.
+
+## The Best of the Rest
+
+The rest of this albums are getting the _Quick Hits_ treatment cause I'm tired of writing.
 
 <ol start="6">
-  <li>_The House Is Burning_ - Isaiah Rashad</li>
-  <li>[_Half God_ - Wiki](https://wiksetnyc.bandcamp.com/album/half-god)</li>
-  <li>_GLOW ON_ - Turnstile</li>
-  <li>_Live Forever_ - Bartees Strange</li>
-  <li>_Disco_ - MIKE</li>
+  <li><em>The House Is Burning</em> - Isaiah Rashad</li>
+  <li><a href="https://wiksetnyc.bandcamp.com/album/half-god"><em>Half God</em> - Wiki</a></li>
+  <li><em>GLOW ON</em> - Turnstile</li>
+  <li><em>Live Forever</em> - Bartees Strange</li>
+  <li><em>Disco</em> - MIKE</li>
 </ol>
 
 # Quick Hits
