--- a/gatsby/content/2021-my-year-in-lists.mdx
+++ b/gatsby/content/2021-my-year-in-lists.mdx
@@ -173,6 +173,9 @@ on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro 
   className="float-right"
 />
 
+Speaking of founding member of the "5th Wave Emo Committee", Ogbert the Nerd's _I Don't Hate You_ is one of my favorite
+albums of last year that I completely missed.
+
 I'm baby craft beer thundercats hexagon skateboard. Jean shorts messenger bag austin brunch health goth chicharrones
 subway tile flexitarian la croix quinoa pitchfork tofu 3 wolf moon chambray hashtag. Synth beard echo park glossier four
 loko. Kale chips wolf skateboard ramps taiyaki messenger bag raw denim mixtape schlitz etsy offal taxidermy heirloom
@@ -217,7 +220,8 @@ beautifully that I get emotional. It's really undescribable to me.
 
 Cassandra has an absolutely fantastic voice, the amount of smooth saxophone and guitar on this album really puts me in
 a relaxing place and the lyrics are so poetic. It's fantastic focusing music as you can tune out the lyrics and relax,
-but this album rewards reading the lyrics along with it.
+but this album rewards reading the lyrics along with it. One of my goals for funemployment is to get a little high and
+wander around the Ramble in Central Park listening to _The Ramble_.
 
 ## The Best of the Rest
 
@@ -242,7 +246,3 @@ The rest of this albums are getting the _Quick Hits_ treatment cause I'm tired o
 
 1. _The Right Time With Bomani Jones_
 2. _The Shutdown Fullcast_: This podcast has dragged me back to loving college football. So nerdy, so funny and dumb.
-
-[nmim]: https://xlrecordings.com/buy/wiki-nomountainsinmanhattan
-[so-it-goes]: https://shopusa.xlrecordings.com/so-it-goes
-[navy-blue]: https://navybluethetruest.bandcamp.com/
