Add one more thing

--- a/gatsby/content/2021-my-year-in-lists.mdx
+++ b/gatsby/content/2021-my-year-in-lists.mdx
@@ -233,6 +233,7 @@ The rest of this albums are getting the _Quick Hits_ treatment cause I'm tired o
   <li><em>GLOW ON</em> - Turnstile</li>
   <li><em>Live Forever</em> - Bartees Strange</li>
   <li><em>Disco</em> - MIKE</li>
+  <li><em>Dope Game Stupid</em> - Bruiser Wolf / <em>shut the fuck up talking to me</em> - Zack Fox</li>
 </ol>
 
 # Quick Hits
