--- a/gatsby/content/what-i-learned-at-talent-inc.mdx
+++ b/gatsby/content/what-i-learned-at-talent-inc.mdx
@@ -20,10 +20,10 @@ there he said something that has stuck with me ever since:
 
 > We have the best users, we have to treat them right. They are patient and we should reward them.
 
-I could not put it better myself. That operational team works with job seekers whom can understandably be demanding. Job
-searching is in the top 3 most stressful moments of their lives. What's incredible about both of these user groups
-(customers & staff) is how kind and helpful they can be when something breaks. How creative they can be when a fix is
-delayed to get the job done. This made my life so much easier and less stressful when the chips were down.
+After four years here, I have to agree! That operational team works with job seekers whom can understandably be
+demanding. Job searching is in the top 3 most stressful moments of their lives. What's incredible about both of these
+user groups (customers & staff) is how kind and helpful they can be when something breaks. How creative they can be when
+a fix is delayed to get the job done. This made my life so much easier and less stressful when the chips were down.
 
 How can I reward this team effort? I was lucky during my tenure at Talent Inc many opportunities to build systems from
 the ground up to empower these users. I feel that we delivered on those opportunities and the fact that we exited kind
@@ -66,9 +66,9 @@ I ever start a company, it will be all Lambdas). **If you drop events, you're dr
 I'm ashamed to say that I never ran an A/B test before my time at Talent. It's just not a concern for early stage
 consulting gigs. That changed very quickly for me and now I can't go back. We used A/B tests for everything:
 
-* You want to see which version will make more money? Split test and let revenue tell the truth.
-* You have a feature that's a little raw that you want help debugging? Hide it behind a feature flag and watch Sentry,
-  the users will test if for you.
+* You want to see which version will make more money? **Split test and let revenue tell the truth.**
+* You have a feature that's a little raw that you want help debugging? **Hide it behind a feature flag and watch Sentry,
+  the users will test if for you.**
 
 That said, there were certainly times that instrumenting an A/B test was annoying and I wished that I didn't need to,
 but I would get over that in the long run. The thing I'm looking forward to most in my next role is what A/B testing
@@ -114,7 +114,7 @@ I cannot recommend them enough. The future is very bright there and I'm sad that
 
 At the same time, I'm very excited for what's next. I don't even know what is next. I only have one speed which is "go
 so hard I burnout once a year". I should probably work on that… I'm going to take a few weeks to establish some better
-habits and doing a through job search next year.
+habits and doing a thorough job search next year.
 
 <figure>
   <img src="./img/what-i-learned-working-at-talentinc/reading-on-couch.jpeg" alt="Me & a coworker in a marketing photo looking at an empty notebook" />
