Finish my "confession"

--- a/gatsby/content/funny-money.mdx
+++ b/gatsby/content/funny-money.mdx
@@ -3,9 +3,12 @@ title: Funny Money
 description: By all means, make that money in crypto, but not all money is good
 slug: funny-money
 date: 2022-01-06T05:00
+cover: https://c.tenor.com/dXZsDQCgO4sAAAAC/the-wire-d-angelo-barksdale.gif
 tags:
   - code
 ---
+
+This is a post about cryptocurrency, but first, let me tell you a tale.
 
 I graduated high school in 2009. Graduated right into the Great Recession. All the money that my parents' saved for my
 college education rapidly shrunk. In order to have a car on the road and go to school, I needed to work 30-40 hours
@@ -33,7 +36,7 @@ sense in paying for the best if it's gonna get yanked in 3 months.
 The day to day was always drama filled and exciting. You drive to Sandusky to replace a switch. You drive to Cleveland
 Heights to setup a new cafe. You learn to make patch cables, you learn more about networking and scripting. You get in
 arguments about how much gas money you should be reimbursed for driving to all those sites. Lots of 16 hour days cause
-it has to get done now now now. Typical IT shit.
+it has to get done now now now. Typical 2 bit IT shit.
 
 What's a little different from a typical IT job is... the customers paying your bills are somewhat unsavory. And _their_
 customers are all poor people trying to turn a dollar into $10 knowing full well that the deck is stacked against them.
@@ -60,7 +63,45 @@ when I was young, I didn't learn. **But hey, that's $100 I didn't have before, a
 
 Well, a few weeks later, the IT job goes sideways. We weren't making enough money, my boss institutes that the day will
 start at 6am and end when the job is done. And now we can't pay for all the gas that you need to drive to and from
-sites.
+sites. Me pushing for that got me fired. It was all good, I quickly found more work doing web sites for a <abbr title="Multi Level Marketing">MLM</abbr> 
+scheme, but that's a story for another time, just to show that I was very dumb back then.
+
+Fast forward 6 months. I'm working an internship at a respectable local publication and I get a call from an unknown
+number. I pick up and it's the bookie from a few months earlier. He's looking for someone to come out to his house and
+replace a hard drive. He offers to make it very worth your time. Me, forgetting how terrifying this whole situation was
+agreed to help him out. I drive over after work and sure enough, the hard drive in his desktop is bad, gotta go to
+MicroCenter to pick up a new hard drive. Before I get to leave, he pulls me aside and asks what's really on his mind:
+
+> Him: There is this guy that is talking shit about me and my friends in the comment section of the local newspaper.
+> I want to find him and have a discussion. You know how I can do that?
+
+**Dear reader, I wish I could make myself the hero and say that I didn't offer any ideas.** Said "I don't know" and
+walked away to get the hard drive with clean hands. But I don't get to do that, I need to live with my decisions and
+tell the truth. What I said was:
+
+> Me: I dunno, you could bribe the webmaster or someone at the newspaper to get an email or IP address of the commenter.
+> There's no way to determine who it is based upon just the comment or the webpage.
+
+I leave to my car and sit down for a minute in sheer terror. I then call my weed guy near by and tell him I'm stopping
+by. I smoke two blunts to the face before going to pick up the hard drive and finish the data transfer. The dude ends up
+paying me 3 times what I quoted, probably for some sort of silence that I am now breaking with this post. I never picked
+up the phone for that person again and have stayed away from that world ever since.
+
+A decade later, looking back at this story, I can say that I learned a lot and have deeply internalized lessons from
+this. **I have striven in every way to only make money ethically and for companies that are at least net neutral when it
+comes to human suffering.** My partner is a social worker and me supporting their career with my tech salary is
+a handshake agreement that I've made with the universe to at least do a little good. This is a very big thing for me.
+
+All that learning is fine, **but I am still very fucking complicit in the human suffering that I supported by "doing my
+job".** I didn't break any legs, but I sure as hell profited from people that did. By the grace of god, I'm hoping that
+I didn't get that poor internet commenter in any trouble, but that's only because another web professional said no to
+a bribe, I hope.
+
+And all of that is ignoring the mundane aspects of my job: supporting internet cafes. **I was supporting an enterprise
+that preys on the most vulnerable in the form of gambling.** Sure, it was legal-ish and I probably couldn't be
+criminally charged, but it's still a moral gray area. You don't want to exist in moral gray areas.
+
+# Isn't this post supposed to be about cryptocurrency?
 
 ![The Wire's fake money scene](https://c.tenor.com/dXZsDQCgO4sAAAAC/the-wire-d-angelo-barksdale.gif)
 
