Make the paper look a little more readable

--- a/gatsby/content/funny-money.mdx
+++ b/gatsby/content/funny-money.mdx
@@ -37,19 +37,19 @@ sense in paying for the best if it's gonna get yanked in 3 months.
 The day to day was always drama filled and exciting. You drive to Sandusky to replace a switch. You drive to Cleveland
 Heights to setup a new cafe. You learn to make patch cables, you learn more about networking and scripting. You get in
 arguments about how much gas money you should be reimbursed for driving to all those sites. Lots of 16 hour days cause
-it has to get done now now now. Typical 2 bit IT shit.
+it has to get done _now now now_. Typical 2 bit IT shit.
 
-What's a little different from a typical IT job is... the customers paying your bills are somewhat unsavory. And _their_
+What's a little different from a typical IT job is... the customers paying your bills are unsavory. And _their_
 customers are all poor people trying to turn a dollar into $10 knowing full well that the deck is stacked against them.
 **Just addicted to these slot machines.** **But hey, you need _their_ money so you can keep a car on the road, so it's
 okay, there's no issue here.**
 
 I've always been a smart ass that asks the questions that shouldn't be asked. One time, I'm on site and talking to one
 of our clients. He's looking for a computer that when he turns it off, all the data disappears. Okay, no problem, get
-him a souped up computer with USB 3 so that he can run a live Linux image. Easy. But then I do what I always do which is
-ask why:
+him a souped up gaming laptop with USB 3 so that he can run a live Linux image. Easy. But then I open my dumb mouth to
+ask why?
 
-> Me: Why do you need a computer that has all the data disappear?
+> Me: Why do you need a computer that has all the data disappear like that?
 >
 > Him: I'm a bookie and that data needs to get gone if the cops show up.
 >
@@ -136,6 +136,9 @@ the recessions in the 1800s around mining too much or too little gold in a given
 gamble on the ups and downs of a market. The people that are super in to crypto are able to sell this vision to get
 people to buy into what is literally a Ponzi scheme when looked at in the right light. But hey, this is other peoples
 money, they are allowed to gamble as they see fit, right?
+
+
+**The other superpower crypto has is being perfect for criminals.**
 
 This is where I go a little Galaxy Brain to convince you this is going to impact you and me. If we accept that this is
 a Ponzi scheme, we have to acknowledge that this would be the biggest Ponzi scheme ever created. Bernie Madoff made the
