--- a/gatsby/content/job-search-2k22.mdx
+++ b/gatsby/content/job-search-2k22.mdx
@@ -9,4 +9,15 @@ tags:
 
 import { JobSearch2k22SankeyChart } from '../src/components/JobSearch/SankeyChart'
 
+At the end of 2021, [I left my job at Talent Inc.][goodbye-talentinc] and conducted an extremely thorough job search. I really prefer to job
+search without a day job so that I can give it my full focus. Today, I am happy to announce that after a little over
+a month of interviewing, I found the perfect job for me. But, before I get to that, I really want to talk about how
+I conducted my job search as it's been something I've been planning for a bit.
+
 <JobSearch2k22SankeyChart />
+
+# Enough about the search! Where are you working!?
+
+TBD
+
+[goodbye-talentinc]: /blog/what-i-learned-working-at-my-first-startup
