Add stats to the job search blog post

--- a/gatsby/content/job-search-2k22.mdx
+++ b/gatsby/content/job-search-2k22.mdx
@@ -14,7 +14,39 @@ search without a day job so that I can give it my full focus. Today, I am happy 
 a month of interviewing, I found the perfect job for me. But, before I get to that, I really want to talk about how
 I conducted my job search as it's been something I've been planning for a bit.
 
+# [Numbers On The Board](https://www.youtube.com/watch?v=DawrlSwHUiM)
+
 <JobSearch2k22SankeyChart />
+
+This job market is wild! I can't tell if companies are hiring harder this cycle or if the fact that my last role was
+"senior software engineer" at a startup or what. This cycle could not have gone any more different than my last job
+search in 2017. 
+
+Let's take a quick at conversion rates:
+
+* **TODO: 2022 percentages need updating at the end of this week**
+* Application → callback rate was 75% in 2022 vs 35% in 2017
+* Application → code test rate was 40% in 2022 vs 9% in 2017
+* Application → on site rate was 24% in 2022 vs 6% in 2017
+* Application → offer rate was 5% in 2022 vs 1% in 2017
+
+The numbers don't tell the full story here either! The later stage numbers here are weighed down by the fact that I was
+able to drop out of processes later on if I wasn't getting good vibes from the company. That freedom alone allowed me to
+have a little more swagger in walking into interviews.
+
+# "Technology Enabled Job Search"
+
+With working at a job focused on job seekers, I had four years to think about how I would approach my own job search.
+A big one that I thought about was how to effectively track open rates of emails and my website. So, I went about wiring
+my resume and email signature to append `utm` parameters to all the links to my website. My thought here was that
+a click through to my site would lead to a more positive outcome on initial submission.
+
+**This turned out to not work at all! I only got 3 visitors to the site from clicks in my email signature or resume
+links.** Making unique copies of my resume and updating my signature on all my emails was seriously annoying, so this
+defintely is not worth the effort. 
+
+I did get elevated traffic to my website during my job search, though. It seems that I can attribute this increase from
+the fact that I did post some blog posts on LinkedIn. My last blog post was brought up a few times 
 
 # Enough about the search! Where are you working!?
 
