Remove dumb sentance

--- a/gatsby/content/job-search-2k22.mdx
+++ b/gatsby/content/job-search-2k22.mdx
@@ -105,9 +105,8 @@ interview, no one complained about how much the code needed to be fixed and ever
 
 Most importantly, what I'm going to be working on excites the heck out of me! Chord's vision is to bring ecommerce
 tooling to statically generated sites. I love [static sites](/blog/2021-website-redesign) and selling things to
-customers! I can't speak about specifics of what I'm going to be working on, but what excites me most about the work is
-that they are doubling down on open up their frontend SDKs. I've never worked on libraries that other developers
-use, so this will be an exciting challenge on top of all the feature work that needs to be done at a startup!
+customers! I've never worked on libraries that other developers use, so this will be an exciting challenge on top of all
+the feature work that needs to be done at a startup!
 
 In closing, this has been a hectic job search and I'm so happy to finally be done with it. Now, I am going to take two
 weeks off to be a human being. I'm probably going to go upstate for a long weekend. Definitely going to play some
