--- a/gatsby/content/icymi-just-married.mdx
+++ b/gatsby/content/icymi-just-married.mdx
@@ -3,16 +3,20 @@ title: "ICYMI: Glocca Morra - Just Married"
 date: 2021-11-15T04:00
 description: Classic emo album about the first year of marriage. Also, a quick primer on emo music.
 cover: ./img/icymi/just-married.jpeg
+slug: icymi-glocca-morra-just-married
 tags:
   - icymi
 ---
 
-<iframe 
-  style="border: 0; width: 320px; height: 470px;" 
-  src="https://bandcamp.com/EmbeddedPlayer/album=3914936245/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" 
-  seamless
-  class="float-right"
-><a href="https://gloccamorradied.bandcamp.com/album/just-married-2">just married by glocca morra</a></iframe>
+import AlbumEmbed from '../src/components/Embeds/Album'
+
+<AlbumEmbed 
+  name="Just Married" 
+  artist="Glocca Morra" 
+  bandcampID="3914936245"
+  url="https://gloccamorradied.bandcamp.com/album/just-married-2"
+  className="float-right"
+/>
 
 Y'all, I love emo music. As you can tell, I have a [range of emotions](/feelings) and I have "sad boi" tendencies for
 sure. So this shouldn't love of emo music shouldn't come as a surprise. All the same, I'm here to tell you that emo gets
