Add MDX shortcodes
This allows me to code split modules used in blog posts so that they are
only imported when needed.

--- a/gatsby/posts/2021-website-redesign.mdx
+++ b/gatsby/posts/2021-website-redesign.mdx
@@ -8,8 +8,6 @@ tags:
   - code
 ---
 
-import GitHubFileEmbed from '../src/components/Shared/GitHubFileEmbed'
-
 ![Home page screenshot](./img/website-update/home-page.png)
 
 In the age of social media and hosted blogs, personal websites don't get the love they deserve. Sure, writing developer
@@ -148,7 +146,7 @@ All I needed was the following in my `gatsby-config.js`.
 
 This allows me to fetch my latest diary entry like so:
 
-<GitHubFileEmbed fileURL="https://github.com/eligundry/eligundry.com/blob/f9aa93ddf5e384e621ebd549b87e4e72defb00e0/gatsby/src/components/Daylio/useLatestFeelings.ts" />
+<GitHubFile fileURL="https://github.com/eligundry/eligundry.com/blob/f9aa93ddf5e384e621ebd549b87e4e72defb00e0/gatsby/src/components/Daylio/useLatestFeelings.ts" />
 
 Super easy! In order for this site to be built daily, I added a call to a Netlify build webhook to the API endpoint
 I upload the diary entries to. This build will also generate a dedicated RSS feed that I use IFTTT to post the entry to
@@ -237,7 +235,7 @@ I love that it's super dynamic, very cute and fits the theme of my site perfectl
 with a button in the bottom right part of the screen that can regenerate the pattern. It's even responsive to my dark
 mode toggle, speaking of which...
 
-<GitHubFileEmbed fileURL="https://github.com/eligundry/eligundry.com/blob/master/gatsby/src/layout/FancyBackground.tsx" />
+<GitHubFile fileURL="https://github.com/eligundry/eligundry.com/blob/master/gatsby/src/layout/FancyBackground.tsx" />
 
 ## Dark Theme
 
@@ -278,7 +276,7 @@ In a previous blog post, I wanted to show a [Gist][gist] like file embed of a fi
 Unfortunately, Github does not provide this out of the box. Luckily, a service called [EmGithub][emgithub] provides
 exactly this. They don't have a React component for this so I made one:
 
-<GitHubFileEmbed fileURL="https://github.com/eligundry/eligundry.com/blob/master/gatsby/src/components/Shared/GitHubFileEmbed.tsx#L40-L86" />
+<GitHubFile fileURL="https://github.com/eligundry/eligundry.com/blob/master/gatsby/src/components/Shared/GitHubFile.tsx#L40-L86" />
 
 Alright, time for me to 🤓 nerd out! EmGithub uses a JavaScript API called [`document.write`][document.write], which is
 something that I didn't know about until recently (for good reason). For those that don't know, `document.write` is an
@@ -314,7 +312,7 @@ last modified timestamps. So, I went about creating a super hacky script that ho
 lifecycle event to directly add the latest commit timestamp for any given node. This required a lot of hard coding path
 rules and is in no way open sourceable, but I really just want to tell people about it!
 
-<GitHubFileEmbed fileURL="https://github.com/eligundry/eligundry.com/blob/master/gatsby/config/utils/addGitLastmodifiedToNode.ts" />
+<GitHubFile fileURL="https://github.com/eligundry/eligundry.com/blob/master/gatsby/config/utils/addGitLastmodifiedToNode.ts" />
 
 # Performance
 
