--- a/gatsby/posts/icymi-just-married.mdx
+++ b/gatsby/posts/icymi-just-married.mdx
@@ -8,9 +8,7 @@ tags:
   - icymi
 ---
 
-import AlbumEmbed from '../src/components/Embeds/Album'
-
-<AlbumEmbed 
+<StreamingAlbum 
   name="Just Married" 
   artist="Glocca Morra" 
   bandcampID="3914936245"
@@ -95,7 +93,7 @@ It really is thrilling, but back to my bullshit.
 
 I've been thinking a lot about this sketch from _I Think You Should Leave_ lately.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/buK45NW_ikI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<YouTube id="buK45NW_ikI" />
 
 I used to be a piece of shit. I'm not anymore, but I used to be, people can change. Regardless of your past, you are
 worthy of love. Also, sloppy steaks is just so funny.
