This is gonna work, I feel it in my bones

--- a/gatsby/posts/icymi-just-married.mdx
+++ b/gatsby/posts/icymi-just-married.mdx
@@ -17,7 +17,7 @@ tags:
 />
 
 Y'all, I love emo music. As you can tell, I have a [range of emotions](/feelings) and I have "sad boi" tendencies for
-sure. So this shouldn't love of emo music shouldn't come as a surprise. All the same, I'm here to tell you that emo gets
+sure. So this love shouldn't of emo music shouldn't come as a surprise. All the same, I'm here to tell you that emo gets
 a bad rap.
 
 When you think of emo music, you probably think about those bands from the mid-2000s like My Chemical Romance or Panic
