Use the correct path

--- a/gatsby/posts/serverless-fun.mdx
+++ b/gatsby/posts/serverless-fun.mdx
@@ -3,6 +3,7 @@ title: Serverless Fun
 description: TBD
 slug: serverless-fun
 date: 2022-03-10T05:00
+draft: true
 tags:
   - code
 ---
@@ -23,3 +24,4 @@ tags:
     it, so that's cool, it just is a hindrance for me.
 * Decided to move my personal infrastructure to AWS
   * DigitalOcean was choice for years, but I'm just not seeing enough growth to justify using it.
+  * AWS is not my favorite because of ethical reasons, but it's the devil I know.
