More code splitting + package upgrades
Please site, you can build, I know it!

--- a/gatsby/posts/job-search-2k22.mdx
+++ b/gatsby/posts/job-search-2k22.mdx
@@ -8,8 +8,6 @@ tags:
   - code
 ---
 
-import { JobSearch2k22SankeyChart } from '../src/components/JobSearch/SankeyChart'
-
 At the end of 2021, [I left my job at Talent Inc.][goodbye-talentinc] and conducted an extremely thorough job search.
 I really prefer to job search without a day job so that I can give it my full focus. Today, I am happy to announce that
 after a little over a month of interviewing, I found the perfect job for me. But, before I get to that, I really want to
@@ -17,7 +15,7 @@ talk about how I conducted my job search as it's been something I've been planni
 
 # [Numbers On The Board](https://www.youtube.com/watch?v=DawrlSwHUiM)
 
-<JobSearch2k22SankeyChart />
+<JobSearchSankeyChart year={2022} />
 
 This job market is wild! I can't tell if companies are hiring harder this cycle or if the fact that my last role was
 "senior software engineer" at a startup or what. This cycle could not have gone any more different than my last job
