The blow mostly works now

--- a/next/content/blog/hackathons-all-the-time.mdx
+++ b/next/content/blog/hackathons-all-the-time.mdx
@@ -3,7 +3,7 @@ title: Hackathons All The Time
 date: 2014-02-22T05:00
 slug: hackathons-all-the-time
 description: My memories of hackathons I've been to thus far.
-cover: ./img/hackathons/hacksu_at_penn_apps.jpg
+cover: /img/hackathons/hacksu_at_penn_apps.jpg
 draft: false
 tags:
   - code
@@ -26,7 +26,7 @@ groundbreaking, amazing stuff that you could only dream to make. And they are
 doing it with such ease.
 
 <figure class="pull-right">
-  <img src="./img/hackathons/nerf-gun-turret.png" alt="Nerf Gun Turret" width="400" height="275" />
+  ![Nerf Gun Turret](/img/hackathons/nerf-gun-turret.png)
   <figcaption>They fired this bad boy at judges. It was a sight to behold.</figcaption>
 </figure>
 
@@ -99,6 +99,6 @@ events, go to one. I'll probably be attending [Hack PSU](http://www.hackpsu.com/
 in a few weeks. Hopefully, I'll see you there.
 
 <figure class="center">
-    <img src="./img/hackathons/hacksu_at_penn_apps.jpg" alt="HacKSU at Penn Apps 2014" />
+    ![HacKSU at Penn Apps 2014](/img/hackathons/hacksu_at_penn_apps.jpg)
     <figcaption>HacKSU at Penn Apps 2014</figcaption>
 </figure>
