--- a/next/content/blog/adhd.mdx
+++ b/next/content/blog/adhd.mdx
@@ -2,7 +2,7 @@
 title: ADHD
 description: Let's quickly run through my life and see how ADHD has effected it.
 slug: adhd
-cover: ./img/adhd/fight-thoughts.png
+cover: /img/adhd/fight-thoughts.png
 date: 2021-10-19T05:00
 tags:
   - mental-health
@@ -51,7 +51,7 @@ I turn 18 and realize that I'm extremely unhappy. Thoughts of suicide unhappy. I
 started going to a therapist/psychiatrist. Talk therapy was (and continues to be) very helpful and they put me on an
 anti-depressant called Celexa. The sadness goes away somewhat but I'm still stressed.
 
-<img src="./img/adhd/i-do-got-the-mental-illness.png" alt="Meme of fat bear with text: i do, i do got the mental illness" />
+<img src="/img/adhd/i-do-got-the-mental-illness.png" alt="Meme of fat bear with text: i do, i do got the mental illness" />
 
 I start attending a technical school that was associated with the vocational school for web development. The first
 semester there, I do great! I'm balancing a full course load with a part time job at RadioShack. But then the job at
@@ -64,7 +64,7 @@ both. And this cycle repeats itself for 5 years! I was constantly employed that 
 money to survive, and flunking classes.
 
 <figure>
-    <img src="./img/adhd/2011-06-10 21.22.12.jpg" alt="Eli in 2011 with Aaron Draplin and some of my fellow interns" />
+    <img src="/img/adhd/2011-06-10 21.22.12.jpg" alt="Eli in 2011 with Aaron Draplin and some of my fellow interns" />
     <figcaption>
         Me in 2011 at one of my internships. I got to meet <a href="https://twitter.com/Draplin">Aaron Draplin</a> and
         work with some very nice and cool people in Cleveland.
@@ -82,7 +82,7 @@ beer and cigarettes. I have since noticed that when I was on them, I would drink
 I was off.
 
 <figure>
-    <img src="./img/adhd/2013-10-05 17.36.09.jpg" alt="Eli in 2013" />
+    <img src="/img/adhd/2013-10-05 17.36.09.jpg" alt="Eli in 2013" />
     <figcaption>
         Me in 2013. All that smoking and ADHD medications kept me skinny, but my skin was trash and I can't excuse that
         facial hair.
@@ -126,7 +126,7 @@ took that offer as it was much more than what I could make in Ohio and NYC is a 
 old than a college town. I quickly become one of the better engineers on the team and just thrive at that job.
 
 <figure>
-    <img src="./img/adhd/IMG_0138.JPG" alt="Eli in 2017 with sunglasses" />
+    <img src="/img/adhd/IMG_0138.JPG" alt="Eli in 2017 with sunglasses" />
     <figcaption>
         This is literally a selfie I took on the way to meet the person it looks like I'm going to marry in 2017! Living
         in Brooklyn was a lot of fun.
@@ -139,7 +139,7 @@ me to gain some weight that I haven't gotten close to shedding, but hey, at leas
 I fall in love with someone special and we move in together in March 2020 and then... COVID happens 😂.
 
 <figure>
-    <img src="./img/adhd/IMG_0352.PNG" alt="Eli and his partner at a wedding" />
+    <img src="/img/adhd/IMG_0352.PNG" alt="Eli and his partner at a wedding" />
     <figcaption>
         How can I not love this dork?
     </figcaption>
@@ -193,7 +193,7 @@ a therapeutic effect that can be used to treat ADHD**. This one that kinda broke
 going on this medication. This same upswing that I attributed to my hard work, discipline and luck also has a chemical
 component!? I don't like this, everything is a lie!
 
-<img src="./img/adhd/fight-thoughts.png" alt="Meme with text: ok ima fight these thoughts, damn brain got hands" />
+<img src="/img/adhd/fight-thoughts.png" alt="Meme with text: ok ima fight these thoughts, damn brain got hands" />
 
 Through all this, I'm coming to acceptance of the fact that I have a lot of internalized ableism. I'm going to fumble
 through this and expose some of my ugliness, but to me, people with disabilities were "others" to be pitied and cared
@@ -246,7 +246,7 @@ And, from what I've gathered, this is one of the core arguments of neurodiversit
 world the same because of chemical imbalances or disabilities, we make the world better with our strengths and it's in
 no one's best interest to define us by what is different. At least that's my interpretation of the situation.
 
-<img src="./img/adhd/IMG_2305.jpeg" alt="Eli looking at a rose in the International Rose Test Garden" />
+<img src="/img/adhd/IMG_2305.jpeg" alt="Eli looking at a rose in the International Rose Test Garden" />
 
 All I know is that, today, I'm doing okay. Tomorrow might be a struggle, but I have the tools and understanding to at
 least deal with it. I'm sleeping good, I'm eating good and that's all I can really ask for. Here's to now 🥂❗️
