Setup SEO and types

--- a/next/content/blog/icymi-beauty-and-the-beat.mdx
+++ b/next/content/blog/icymi-beauty-and-the-beat.mdx
@@ -2,7 +2,7 @@
 title: "ICYMI: Edan - Beauty & The Beat"
 date: 2017-01-27T05:00
 description: Underground rap record that will rock you.
-cover: ./img/icymi/beauty-and-the-beat.jpg
+cover: /img/icymi/beauty-and-the-beat.jpg
 tags: 
   - icymi
 ---
@@ -77,5 +77,5 @@ doesn't overstay it's welcome. Check it out.
   Over Words The Rhyme*
 * Rating: 5 Marshall Amplifiers, 2 turntables, and a microphone
 
-[1]: ./img/icymi/beauty-and-the-beat.jpg
+[1]: /img/icymi/beauty-and-the-beat.jpg
 [2]: https://open.spotify.com/album/0E5nyAi6rLhzfrsOxYedX3
