--- a/next/content/blog/icymi-just-married.mdx
+++ b/next/content/blog/icymi-just-married.mdx
@@ -2,7 +2,7 @@
 title: "ICYMI: Glocca Morra - Just Married"
 date: 2021-11-15T04:00
 description: Classic emo album about the first year of marriage. Also, a quick primer on emo music.
-cover: ./img/icymi/just-married.jpeg
+cover: /img/icymi/just-married.jpeg
 slug: icymi-glocca-morra-just-married
 tags:
   - icymi
