--- a/next/content/blog/icymi-moodymann.mdx
+++ b/next/content/blog/icymi-moodymann.mdx
@@ -2,7 +2,7 @@
 title: "ICYMI: Moodymann - Moodymann"
 date: 2016-12-02T05:00
 description: A catchy mix of Motown and house music.
-cover: ./img/icymi/moodymann.jpg
+cover: /img/icymi/moodymann.jpg
 tags: 
   - icymi
 ---
@@ -27,5 +27,5 @@ they'll hook you hard.
 
 4.5 bags of popcorn
 
-[1]: ./img/icymi/moodymann.jpg
+[1]: /img/icymi/moodymann.jpg
 [2]: https://open.spotify.com/album/61sGO58ljdDgD4Mn6Bcj3P
