--- a/next/content/blog/job-search-2k22.mdx
+++ b/next/content/blog/job-search-2k22.mdx
@@ -3,7 +3,7 @@ title: Job Search 2k22
 description: This was the most wild job search I've ever done
 slug: job-search-2k22
 date: 2022-01-28T05:00
-cover: ./img/job-search-2k22/sankey-chart.png
+cover: /img/job-search-2k22/sankey-chart.png
 tags:
   - code
 ---
@@ -93,7 +93,7 @@ Never heard it put that way before, but product does be like that sometimes.
 
 # Enough about the search! Where are you working!?
 
-![Chord Commerce Logo](./img/job-search-2k22/chord-logo.jpg)
+![Chord Commerce Logo](/img/job-search-2k22/chord-logo.jpg)
 
 **I will be joining [Chord](https://chord.co) as a Staff Engineer in early February!**
 
