--- a/next/content/blog/icymi-live-in-concert-ep.mdx
+++ b/next/content/blog/icymi-live-in-concert-ep.mdx
@@ -2,12 +2,12 @@
 title: "ICYMI: Wiz Khalifa & Curren$y - Live In Concert EP"
 date: 2016-11-18T05:00
 description: Weed rap meets classic jazz flute with fun results.
-cover: ./img/icymi/live-in-concert.jpg
+cover: /img/icymi/live-in-concert.jpg
 tags: 
   - icymi
 ---
 
-![Wiz Khalifa & Curren$y - Live In Concert EP](./img/icymi/live-in-concert.jpg)
+![Wiz Khalifa & Curren$y - Live In Concert EP](/img/icymi/live-in-concert.jpg)
 
 This week, I'm gonna take us back to 2013. Happier times for sure. The album is
 [*Live in Concert EP* from Wiz Khalifa and Curren$y][1]. Don't be mislead, this
