--- a/next/content/blog/icymi-live-in-concert-ep.mdx
+++ b/next/content/blog/icymi-live-in-concert-ep.mdx
@@ -3,6 +3,7 @@ title: "ICYMI: Wiz Khalifa & Curren$y - Live In Concert EP"
 date: 2016-11-18T05:00
 description: Weed rap meets classic jazz flute with fun results.
 cover: /img/icymi/live-in-concert.jpg
+slug: icymi-live-in-concert-ep
 tags: 
   - icymi
 ---
