--- a/next/content/blog/icymi-quarantine.mdx
+++ b/next/content/blog/icymi-quarantine.mdx
@@ -3,6 +3,7 @@ title: "ICYMI: Laurel Halo - Quarantine"
 date: 2016-12-09T05:00
 description: A beautiful ambient album about the pain of a breakup.
 cover: /img/icymi/quarantine.jpg
+slug: icymi-quarantine
 tags: 
   - icymi
 ---
