--- a/next/content/blog/funny-money.mdx
+++ b/next/content/blog/funny-money.mdx
@@ -114,8 +114,8 @@ now, as technologists, a lot of us are "waiting and seeing" where this goes inst
 of the outcomes. **We haven't learned anything from Facebook causing a genocide**. While we ride the fence, non-technical
 people are heavily buying into crypto.
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Much of the money that is being made in web3 right now, is this wealth transfer.<br /><br />I don&#39;t worry so much about rich folk paying $85 gas fees for a glorified DNS record. I worry about poorer people getting scammed right now, and no one is stopping it.</p>&mdash; Mekka 💉💉💉🎉 *My Mask Protects You* Okereke (@mekkaokereke) <a href="https://twitter.com/mekkaokereke/status/1476359736001916929?ref_src=twsrc%5Etfw">December 30, 2021</a></blockquote>
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">The median net worth of a Black family is $24K.<br /><br />So when a cryptobro mints an NFT for $5, sells it to their own alt-accounts for $1K, then $3K, then lies, &quot;Cool! Price went up!&quot; and then dumps it to an unsuspecting Black woman for $5K to &quot;help her get into crypto,&quot; it hurts.</p>&mdash; Mekka 💉💉💉🎉 *My Mask Protects You* Okereke (@mekkaokereke) <a href="https://twitter.com/mekkaokereke/status/1476365259141124096?ref_src=twsrc%5Etfw">December 30, 2021</a></blockquote>
+<Tweet id="1476359736001916929" />
+<Tweet id="1476365259141124096" />
 
 To be completely honest, my dad is one of these people buying into crypto. He also happens to believe in "sound money"
 and that the financial system will collapse and we'll return to the gold standard. These are conversations that I have
