--- a/next/content/blog/icymi-moodymann.mdx
+++ b/next/content/blog/icymi-moodymann.mdx
@@ -3,6 +3,7 @@ title: "ICYMI: Moodymann - Moodymann"
 date: 2016-12-02T05:00
 description: A catchy mix of Motown and house music.
 cover: /img/icymi/moodymann.jpg
+slug: icymi-moodymann
 tags: 
   - icymi
 ---
