--- a/next/content/blog/icymi-the-monitor.mdx
+++ b/next/content/blog/icymi-the-monitor.mdx
@@ -3,6 +3,7 @@ title: "ICYMI: Titus Andronicus - The Monitor"
 date: 2017-01-20T05:00
 description: Epic punk album about anxiety and fighting the man.
 cover: /img/icymi/the-monitor.jpg
+slug: icymi-the-monitor
 tags:
   - icymi
 ---
