Move GitHubCalendar to SSG + image blurring

--- a/next/content/blog/adhd.mdx
+++ b/next/content/blog/adhd.mdx
@@ -51,7 +51,7 @@ I turn 18 and realize that I'm extremely unhappy. Thoughts of suicide unhappy. I
 started going to a therapist/psychiatrist. Talk therapy was (and continues to be) very helpful and they put me on an
 anti-depressant called Celexa. The sadness goes away somewhat but I'm still stressed.
 
-<img src="/img/adhd/i-do-got-the-mental-illness.png" alt="Meme of fat bear with text: i do, i do got the mental illness" />
+![Meme of fat bear with text: i do, i do got the mental illness](/img/adhd/i-do-got-the-mental-illness.png)
 
 I start attending a technical school that was associated with the vocational school for web development. The first
 semester there, I do great! I'm balancing a full course load with a part time job at RadioShack. But then the job at
