--- a/next/content/blog/2021-website-redesign.mdx
+++ b/next/content/blog/2021-website-redesign.mdx
@@ -15,7 +15,9 @@ based content on a site like [medium.com][medium] or [dev.to][dev.to] will get m
 make on your own, but there is something extremely satisfying in owning every pixel on a site with your name on it.
 I saw this Tweet the other day and it seemed fitting to how I think about personal sites.
 
-<Tweet id="1456360721084674098" />
+<Tweet id="1456360721084674098">
+  <blockquote><p lang="en" dir="ltr">trying this analogy thing <a href="https://t.co/Q9889HOF3B">pic.twitter.com/Q9889HOF3B</a></p>&mdash; Jane Manchun Wong (@wongmjane) <a href="https://twitter.com/wongmjane/status/1456360721084674098?ref_src=twsrc%5Etfw">November 4, 2021</a></blockquote>
+</Tweet>
 
 If we are entering the era of Web3 (which is Soylent in this Tweet, ewww) and it's ethos is trying to revive the
 techno-optimisim and ownership of the Web 1.0 era, what better way to embody this than with an over-engineered personal
@@ -226,7 +228,9 @@ in the best possible light. Thanks Amrit, I made sure to buy you some coffees.
 After cribbing the template for this site, I was feeling good about the design, but it still needed something more to
 really show off my personality. It took me a few weeks and some endless scrolling on Twitter before I came across this:
 
-<Tweet id="1455150458352381963" />
+<Tweet id="1455150458352381963">
+  <blockquote><p lang="en" dir="ltr">New Houdini stuff! ✨<br /><br />Magical generative patterns that rearrange themselves based on the browser window 🎨<br /><br />A kinda different approach for responsive design...<br /><br />Inspired by <a href="https://twitter.com/chriscoyier?ref_src=twsrc%5Etfw">@chriscoyier</a> &#39;s generative grids pen 💛<br /><br />CodePen (Desktop only + Chrome / Edge) <a href="https://t.co/WvYqXy3Yoq">https://t.co/WvYqXy3Yoq</a> <a href="https://t.co/6kJCifGdbB">pic.twitter.com/6kJCifGdbB</a></p>&mdash; George Francis (@georgedoescode) <a href="https://twitter.com/georgedoescode/status/1455150458352381963?ref_src=twsrc%5Etfw">November 1, 2021</a></blockquote>
+</Tweet>
 
 This only works natively in Chrome + Edge, but I have been able to polyfill it so it works in Safari + Firefox, thought
 it's slightly more buggy than the Chrome version.
@@ -235,7 +239,7 @@ I love that it's super dynamic, very cute and fits the theme of my site perfectl
 with a button in the bottom right part of the screen that can regenerate the pattern. It's even responsive to my dark
 mode toggle, speaking of which...
 
-<GitHubFile fileURL="https://github.com/eligundry/eligundry.com/blob/master/gatsby/src/layout/FancyBackground.tsx" />
+<GitHubFile fileURL="https://github.com/eligundry/eligundry.com/blob/0cba16c996e88b8269ce124752751325f3051a8d/gatsby/src/layout/FancyBackground.tsx" />
 
 ## Dark Theme
 
@@ -276,7 +280,7 @@ In a previous blog post, I wanted to show a [Gist][gist] like file embed of a fi
 Unfortunately, Github does not provide this out of the box. Luckily, a service called [EmGithub][emgithub] provides
 exactly this. They don't have a React component for this so I made one:
 
-<GitHubFile fileURL="https://github.com/eligundry/eligundry.com/blob/master/gatsby/src/components/Shared/GitHubFile.tsx#L40-L86" />
+<GitHubFile fileURL="https://github.com/eligundry/eligundry.com/blob/0cba16c996e88b8269ce124752751325f3051a8d/gatsby/src/components/Embeds/GitHubFile.tsx#L40-L97" />
 
 Alright, time for me to 🤓 nerd out! EmGithub uses a JavaScript API called [`document.write`][document.write], which is
 something that I didn't know about until recently (for good reason). For those that don't know, `document.write` is an
