--- a/next/content/blog/hosting-gatsby-on-digitalocean-spaces.mdx
+++ b/next/content/blog/hosting-gatsby-on-digitalocean-spaces.mdx
@@ -228,7 +228,9 @@ colors this connection waterfall is (the time scale is roughly the same as the w
 
 Also, how can you not enjoy their developer content!?
 
-<Tweet id="1362440545604415493" />
+<Tweet id="1362440545604415493">
+    <blockquote><p lang="en" dir="ltr">Deploy serverless functions with a simple push ✨ <a href="https://t.co/p4k08cv4Q1">pic.twitter.com/p4k08cv4Q1</a></p>&mdash; Netlify (@Netlify) <a href="https://twitter.com/Netlify/status/1362440545604415493?ref_src=twsrc%5Etfw">February 18, 2021</a></blockquote>
+</Tweet>
 
 # Conclusion
 
